Fix weird layout shift when hovering on header links

--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ body {
 }
 
 .guitar-list li:hover {
-    font-size: 24px;
+    transform: scale(1.2);
     font-weight: bold;
 }
 
